Add extra VMOptions when running test with java-11